--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
+    "@types/redux-actions": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "4.4.1",
+    "axios": "^0.21.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "2.22.0",
@@ -22,7 +24,10 @@
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-safe-area-context": "^3.3.0",
-    "react-native-screens": "^3.5.0"
+    "react-native-screens": "^3.5.0",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.1",
+    "redux-actions": "^2.6.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
