--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,10 @@
 {
-    "singleQuote": true,
-    "semi": true,
-    "useTabs": true,
-    "tabWidth": 2,
-    "trailingComma": "all",
-    "printWidth": 80,
+	"singleQuote": true,
+	"semi": true,
+	"useTabs": true,
+	"tabWidth": 2,
+	"printWidth": 80,
+	"bracketSpacing": true,
+	// "jsxSingleQuote": true,
+	"trailingComma": "all"
 }
