--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-react-hooks": "4.0.8",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-dotenv": "^3.1.1",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
     "react-redux": "^7.2.4",
