--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/redux-actions": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "4.4.1",
     "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "2.22.0",
@@ -26,9 +28,11 @@
     "react-native-dotenv": "^3.1.1",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
+    "react-native-simple-toast": "^1.1.3",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
-    "redux-actions": "^2.6.5"
+    "redux-actions": "^2.6.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
