--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.0.2",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/redux-actions": "^2.6.2",
+    "@types/redux-logger": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "4.4.1",
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
@@ -32,6 +33,7 @@
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
     "redux-actions": "^2.6.5",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
