--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "eslint-plugin-react-hooks": "4.0.8",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-chart-kit": "^6.11.0",
     "react-native-dotenv": "^3.1.1",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
     "react-native-simple-toast": "^1.1.3",
+    "react-native-svg": "^12.1.1",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
     "redux-actions": "^2.6.5",
