--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-react": "7.20.3",
     "eslint-plugin-react-hooks": "4.0.8",
+    "html-entities": "^2.3.2",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-chart-kit": "^6.11.0",
