--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
     "@types/react-native-dotenv": "^0.2.0",
+    "@types/react-native-vector-icons": "^6.4.8",
     "@types/redux-actions": "^2.6.2",
     "@types/redux-logger": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "4.4.1",
@@ -34,6 +35,7 @@
     "react-native-screens": "^3.5.0",
     "react-native-simple-toast": "^1.1.3",
     "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
     "redux-actions": "^2.6.5",
